sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__locked_sets_hidden_pairs.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
expression: "TransportDeductions::from(deductions)"
---
deductions:
  - reasons: []
    actions:
      - position:
          row: 3
          column: 2
        deleteCandidates:
          - 5
          - 6
      - position:
          row: 4
          column: 2
        deleteCandidates:
          - 3
          - 6
          - 7
  - reasons: []
    actions:
      - position:
          row: 4
          column: 6
        deleteCandidates:
          - 6
          - 9
      - position:
          row: 5
          column: 6
        deleteCandidates:
          - 1
          - 5
          - 9
