sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__locked_sets_naked_pairs.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
expression: "TransportDeductions::from(deductions)"
---
deductions:
  - reasons: []
    actions:
      - position:
          row: 0
          column: 3
        deleteCandidates:
          - 1
      - position:
          row: 0
          column: 4
        deleteCandidates:
          - 1
          - 6
      - position:
          row: 0
          column: 5
        deleteCandidates:
          - 6
  - reasons: []
    actions:
      - position:
          row: 2
          column: 0
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 2
          column: 0
        deleteCandidates:
          - 7
      - position:
          row: 2
          column: 4
        deleteCandidates:
          - 6
          - 7
  - reasons: []
    actions:
      - position:
          row: 3
          column: 4
        deleteCandidates:
          - 8
      - position:
          row: 5
          column: 4
        deleteCandidates:
          - 8
  - reasons: []
    actions:
      - position:
          row: 3
          column: 7
        deleteCandidates:
          - 5
          - 8
      - position:
          row: 5
          column: 8
        deleteCandidates:
          - 5
